--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@ html {
 }
 
 body {
+  height: 100vh;
+  
   margin: 0;
   padding: 0;
+
+  background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)),
+  url("https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+  background-size: cover;
+  background-position: bottom;
 }
