--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,8 @@ body {
   url("https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
   background-size: cover;
   background-position: bottom;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
