--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -2,9 +2,9 @@
 
     max-width: fit-content;
 
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
 
-    padding: 1rem;
+    padding: 0.5rem 1rem;
     margin-bottom: 1rem;
     border-radius: 10px;
 
@@ -16,10 +16,12 @@
 .title {
     font-size: 2rem;
     margin-right: 2rem;
+    font-family: 'Roboto Slab';
 }
 
 .time {
     font-size: 1.5rem;
     margin-bottom: .1rem;
+    color: #e63946;
 }
 
