--- a/src/Components/NumPad/NumPad/NumPad.module.css
+++ b/src/Components/NumPad/NumPad/NumPad.module.css
@@ -1,9 +1,11 @@
 .numpad {
 
+  max-width: fit-content;
+
   margin-top: 1rem;
+
+  background-color: rgba(255, 255, 255, 0.4);
 
   display: flex;
   flex-direction: row;
-
-  max-width: fit-content;
 }
