--- a/src/Components/NumPad/Number/Number.module.css
+++ b/src/Components/NumPad/Number/Number.module.css
@@ -1,21 +1,6 @@
-.controlButtons {
-    
-    max-height: 22rem;
-
-    margin-left: 1rem;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    background-color: rgba(255, 255, 255, 0.4);
-}
-
-.individualButton {
-
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+.number {
+    margin-left: 0.3rem;
+    margin-right: 0.3rem;
 
     background-color: #000;
     background-image: none;
@@ -26,10 +11,11 @@
     color: #fff;
     cursor: pointer;
     display: inline-block;
-    font-size: 14px;
+    font-size: 1.25rem;
     font-weight: 400;
+    line-height: 20px;
     overflow: visible;
-    padding: 1rem 2.75rem 2rem 1rem;
+    padding: 1rem 1rem 2rem 1rem;
     text-align: center;
     text-transform: none;
     touch-action: manipulation;
