--- a/src/Components/UI/Button/Button.module.css
+++ b/src/Components/UI/Button/Button.module.css
@@ -3,14 +3,15 @@
     height: 3rem;
     width: 3rem;
     
-    border: 2px solid black;
     border-radius: 50% 50%;
-
-    font-size: 0.75rem;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
     cursor: pointer;
+}
+
+.button:hover {
+    background-color: #84a98c;
 }
