--- a/src/Components/UI/Modal/DifficultyModal/DifficultyModal.module.css
+++ b/src/Components/UI/Modal/DifficultyModal/DifficultyModal.module.css
@@ -9,6 +9,10 @@
 }
 
 .modal {
+
+  text-align: center;
+  font-family: 'Roboto Slab';
+
   position: fixed;
   top: 40%;
   left: 48%;
@@ -20,7 +24,13 @@
 }
 
 .buttonRow {
+  
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.button {
+  padding: 2rem;
+  font-weight: 700;
 }
