--- a/src/Components/UI/Modal/SolvedModal/SolvedModal.module.css
+++ b/src/Components/UI/Modal/SolvedModal/SolvedModal.module.css
@@ -9,8 +9,11 @@
   }
   
   .modal {
+
+    font-family: 'Roboto Slab';
+
     position: fixed;
-    top: 10%;
+    top: 35%;
     left: 48%;
     transform: translate(-50%, -50%);
     display: inline-block;
@@ -23,4 +26,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .button {
+    
+    font-weight: 600;
+    padding: 2rem;
   }
