--- a/src/Components/Grid/Row/Row.module.css
+++ b/src/Components/Grid/Row/Row.module.css
@@ -5,3 +5,12 @@
     height: 3rem;
     max-height: 3rem;
 }
+
+.row:nth-child(3n + 1) {
+    border-top: solid 2px black;
+}
+
+.row:nth-child(9) {
+    border-bottom: solid 2px black;
+}
+
