--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 .app {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
