--- a/src/Components/NumPad/NumPad/NumPad.module.css
+++ b/src/Components/NumPad/NumPad/NumPad.module.css
@@ -2,12 +2,12 @@
 
   max-width: fit-content;
 
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 
   background-color: rgba(255, 255, 255, 0.4);
 
   display: flex;
   flex-direction: row;
 
-  padding: 0.5 !important;
+  padding: 0.7rem !important;
 }
