--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,14 @@
 
 html {
   font-family: "Open Sans", sans-serif;
-
+  height: 100%;
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   
   margin: 0;
-  padding: 0;
+  padding: 15px;
 
   background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)),
   url("https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
@@ -19,6 +19,7 @@ body {
   background-position: bottom;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  flex: 1;
 }
