--- a/src/Components/UI/Modal/SolvedModal/SolvedModal.module.css
+++ b/src/Components/UI/Modal/SolvedModal/SolvedModal.module.css
@@ -10,26 +10,28 @@
   
   .modal {
 
+    width:max-content;
+
     font-family: 'Roboto Slab';
 
     position: fixed;
-    top: 35%;
-    left: 48%;
+    top: 10%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   
     z-index: 100;
     overflow: hidden;
   }
 
-  .controlRow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .modal h2 {
+    margin-right: 1rem;
   }
 
+
   .button {
-    
     font-weight: 600;
     padding: 2rem 2rem 2.2rem 2.4rem;
   }
