--- a/src/Components/UI/Modal/SolvedModal/SolvedModal.module.css
+++ b/src/Components/UI/Modal/SolvedModal/SolvedModal.module.css
@@ -28,6 +28,18 @@
 
   .modal h2 {
     margin-right: 1rem;
+    margin-bottom: 0.25rem;
+    margin-top: 0.25rem;
+  }
+
+  .modal section {
+    color: red;
+  }
+
+  .modal header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
 
