--- a/src/Components/UI/Card/Card.module.css
+++ b/src/Components/UI/Card/Card.module.css
@@ -7,7 +7,7 @@
   position: relative;
   background-color: white;
   
-  /* Note: makes card hug inside components  */
+  /* Note: Makes card hug inside components  */
   display: inline-block;
   width: auto;
 }
